# rust-monitor-JsWebHyper

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  config.json  config.yaml.example
hyperliquid-rust-sdk-master/src/fangtang/: sc_send.rs
src/: gui.rs  main.rs
src/monitors/: api_monitor.rs  hyperliquid_monitor.rs  js_monitor.rs  mod.rs  static_monitor.rs
src/notifiers/: mod.rs  server_chan.rs
src/utils/: mod.rs
test/: data.json
